--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -15,6 +15,12 @@
     <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">
         Google Login
     </a><!--스프링 시큐리티 제공 -->
+
+    <a href="/oauth2/authorization/naver" class="btn btn-success active" role="button">
+        Naver Login
+    </a><!--스프링 시큐리티 제공 -->
+
+
 {{/userName}}
         <!--출력영상-->
         <table class="table table-horizontal table-bordered">
