--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -23,4 +23,6 @@
             <button type="button" class="btn btn-primary" id="btn-save"  >등록</button>
         </div>
     </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/index.js"></script>
 {{>layout/footer}}
