--- a/src/main/resources/templates/posts-update.mustache
+++ b/src/main/resources/templates/posts-update.mustache
@@ -29,4 +29,7 @@
         <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="/index.js"></script>
 {{>layout/footer}}
